# sagent

./: .gitignore  README.md  flake.nix  pyproject.toml  research.md
sagent/: __init__.py  cli.py  digest.py  frontmatter.py  llm.py  parser.py  pipeline.py  project_context.py  project_doc.py  rate.py  rollup.py  state.py  understand.py  watcher.py
tests/: test_cli.py  test_digest.py  test_frontmatter.py  test_parser.py  test_pipeline.py  test_project_context.py  test_project_doc.py  test_rate.py  test_rollup.py  test_session_doc.py  test_state.py  test_understand.py  test_watcher.py
