[project]
name = "sagent"
version = "0.1.0"
description = "Scribe agent that observes Claude Code sessions and writes understanding digests"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
sdk = ["anthropic>=0.40.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anthropic>=0.40.0",
]

[project.scripts]
sagent = "sagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sagent"]
